# 4201152-Sist-linux-embebidos

./: README.md
Proyecto/: README.md
Proyecto/Calibrar_TDS/: README.md
Proyecto/Node_Tank/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
Proyecto/Node_Tank/main/: CMakeLists.txt  main.c  net_manager.c  net_manager.h  pump_driver.c  pump_driver.h  sensor_turbidez.c  sensor_ultrasonico.h  softap_sta.c  tds_driver.c  tds_driver.h  ultrasonic_driver.c  ultrasonic_driver.h
Proyecto/Nodo_Cisterna/: .gitignore  CHANGELOG_NODERED.md  CHECKLIST.md  INICIO.md  NODERED_FLOW_EXAMPLE.json  NODERED_INTEGRATION.md  QUICKSTART_NODERED.md  QUICK_START.md  README.md  RESUMEN_PROYECTO.md  comandos-utiles.sh  partitions.csv  sdkconfig
Proyecto/Nodo_Cisterna/main/: CMakeLists.txt  main.c
Proyecto/Test_Sensores/: CMakeLists.txt
Proyecto/Test_Sensores/main/: CMakeLists.txt  main.c  sensor_turbidez.c  sensor_turbidez.h  sensor_ultrasonico.c
Proyecto/Test_Sensores/test/: test_sensores.c
Tareas/: 1_Tarea
Tareas/1_Tarea/: 1_Tarea
Tareas/1_Tarea/meminfo/: Makefile  README.md  meminfo
Tareas/2_Tarea/: Makefile  README.md
Tareas/2_Tarea/AI_interaction_log/: ai_log.md
Tareas/2_Tarea/actuators/: actuator.h  buzzer_actuator.c  led_actuator.c
Tareas/2_Tarea/controller/: ctl.c
Tareas/2_Tarea/sensor/: sensor.c  sensor.h
Tareas/2_Tarea/tests/: sensor_feed.csv
Tareas/3_Tarea/: .gitignore  Makefile  README.md  test.log -d synthetic
Tareas/3_Tarea/ai/: prompt-log.md  provenance.json  reflection.md
Tareas/3_Tarea/src/: assignment-sensor.c
(+30 files in other folders)
